# camera_mlx90640

./: README.md  pyproject.toml
camera_mlx90640/: __init__.py  camera_mlx90640.py  cmd_rsp_example.py  live_view.py  live_view_cli.py
examples/: grab_frames.py  test.py
