[tool.poetry]
name = "camera-mlx90640"
version = "0.1.0"
description = ""
authors = ["Will Dickson <wbd@caltech.edu>"]
readme = "README.md"
packages = [{include = "camera_mlx90640"}]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
numpy = "^1.25.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
